--- a/SubscriptionServiceManagementSystem/SubscriptionServiceManagementSystem/SubscriptionServiceManagementSystem.csproj
+++ b/SubscriptionServiceManagementSystem/SubscriptionServiceManagementSystem/SubscriptionServiceManagementSystem.csproj
@@ -46,7 +46,9 @@
     <Compile Include="Film.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Season.cs" />
     <Compile Include="StreamingService.cs" />
+    <Compile Include="TVShow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
